fix: pre-create all goblin elements to prevent layout shifting

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,6 +60,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: none; /* Сначала скрыт */
 }
 
 .modal {
